Minor edit - The header not aligned center. fixed by adding margin-left 5px - removed code in @media header that was not necessary.

--- a/css/main.css
+++ b/css/main.css
@@ -47,14 +47,12 @@ header {
     header h1{
         margin-left: 0px;
         text-align: center;
+        margin-left: 5px;
     }
     nav{
-        padding-right: 0px;
-        padding-left: 20px;
         display: none
     }
     nav a {
-        padding-right: 0px;
         display: none;
     }
   }
